@@ -1,27 +1,1 @@
-
-# Query 1: 0 QPS, 0x concurrency, ID 0xF9A57DD5A41825CA at byte 0 ________
-# This item is included in the report because it matches --limit.
-# Scores: Apdex = 0.50 [1.0]*, V/M = 0.20
-# Query_time sparkline: |      ^ |
-# Time range: all events occurred at 2011-02-19T14:45:26
-# Attribute    pct   total     min     max     avg     95%  stddev  median
-# ============ === ======= ======= ======= ======= ======= ======= =======
-# Count        100       3
 # Exec time    100      9s      2s      4s      3s      4s   786ms      3s
-# Lock time      0       0       0       0       0       0       0       0
-# Query size   100      45      15      15      15      15       0      15
-# id           100     690     229     231     230  223.14    0.00  223.14
-# String:
-# Hosts        localhost
-# Users        msandbox
-# Query_time distribution
-#   1us
-#  10us
-# 100us
-#   1ms
-#  10ms
-# 100ms
-#    1s  ################################################################
-#  10s+
-# EXPLAIN /*!50100 PARTITIONS*/
-select sleep(5)\G
